Extra Details added for Abyssal Dread
All extra details are in for the abyssal dread page. Also, all projects and the projects page now have all projects listed in the side bar.

--- a/Conjoined.html
+++ b/Conjoined.html
@@ -38,12 +38,24 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<h2>Menu</h2>
+						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="ProgrammingProjects.html">Projects</a></li>
+							<li><a href="AboutMe.html">About Me</a></li>
+							<li><a href="Education.html">Education</a></li>
+							<li><a href="Resumé.html">Resumé</a></li>
+							<li><a href="3DArt.html">3D Art</a></li>
+							<li><a href="GamesThatInspireMe.html">Games That Inspire Me</a></li>
+						</ul>
+						<h2>Projects</h2>
+						<ul>
+							<li><a href="AbyssalDread.html">Abyssal Dread</a></li>
+							<li><a href="BitterExtinction.html">Bitter Extinction</a></li>
+							<li><a href="Conjoined.html">Conjoined</a></li>
+							<li><a href="RippleDefence.html">Ripple Defence</a></li>
+							<li><a href="CupCatch.html">Cup Catch</a></li>
+							<li><a href="LootGenerationSystems.html">Loot Generation Systems</a></li>
 						</ul>
 					</nav>
 
