--- a/AbyssalDread.html
+++ b/AbyssalDread.html
@@ -40,10 +40,21 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="ProgrammingProjects.html">Projects</a></li>
+							<li><a href="AboutMe.html">About Me</a></li>
+							<li><a href="Education.html">Education</a></li>
+							<li><a href="Resumé.html">Resumé</a></li>
+							<li><a href="3DArt.html">3D Art</a></li>
+							<li><a href="GamesThatInspireMe.html">Games That Inspire Me</a></li>
+						</ul>
+						<h2>Projects</h2>
+						<ul>
+							<li><a href="AbyssalDread.html">Abyssal Dread</a></li>
+							<li><a href="BitterExtinction.html">Bitter Extinction</a></li>
+							<li><a href="Conjoined.html">Conjoined</a></li>
+							<li><a href="RippleDefence.html">Ripple Defence</a></li>
+							<li><a href="CupCatch.html">Cup Catch</a></li>
+							<li><a href="LootGenerationSystems.html">Loot Generation Systems</a></li>
 						</ul>
 					</nav>
 
@@ -96,7 +107,8 @@
 
 							<div class="mainInfo">
 								<h2>Test Room</h2>
-								<p>This room was built to help the team develop, test and bug fix mechanics. In this room you could become invincible, teleport, spawn and clear any enemy type. There was also the ability to fly around.</p>
+								<p>A sandbox environment I designed and implemented to streamline the development and testing of core gameplay mechanics. 
+								This room allowed developers to toggle invincibility, spawn or remove any enemy type, teleport, and freely fly around the map.</p>
 
 								<details class="video-dropdown">
 									<summary>Show Video "Yeeter Testing" ▼</summary>
@@ -121,13 +133,17 @@
 
 								<details class="text-dropdown">
 									<summary>Show Extra Details ▼</summary>
-									<p> Extra details...</p>
+									<p>
+										The Test Room was a valuable internal tool designed to aid iteration and debugging throughout the development process. 
+										I used this room extensively to develop the behaviours of each enemy type and other systems I worked on. 
+										The room featured buttons to toggle key mechanics such as god mode for health, the insanity mechanic, and options for spawning and clearing enemies.
+									</p>
 								</details>
 							</div>
 
 							<div class="mainInfo">
 								<h2>Main Menu</h2>
-								<p>I worked with an artist to develop the look & functionality of the main menu.</p>
+								<p>I collaborated with an artist to bring the main menu to life by implementing the layout and functionality while supporting the visual design to align with the game's style and tone.</p>
 
 								<details class="video-dropdown">
 									<summary>Show Video "Main Menu" ▼</summary>
@@ -138,13 +154,22 @@
 
 								<details class="text-dropdown">
 									<summary>Show Extra Details ▼</summary>
-									<p> Extra details...</p>
+									<p>
+										As the main menu served as the player's entry point into the game, it was essential for it to be both visually appealing and functionally solid. I was responsible for scripting core menu functions and managing the settings.
+										I worked on the functionality of the buttons as well as the options menu.
+									</p>
+									<p>
+										One of the key visual features I developed was a looping background image system. I programmed smooth fade transitions between images, creating a subtle atmosphere that complemented the game’s tone and menu music.
+										Additionally, I implemented a name entry system that allowed players to input and save their names. This data was then carried into gameplay, where it was displayed on a transition scoreboard between levels.
+									</p>
 								</details>
 							</div>
 
 							<div class="mainInfo">
 								<h2>Crystal Boss</h2>
-								<p>In the final stage of the game, there was a scrystal boss which I ahd worked on. This required the players to charge up the crystal by staying within the set area until the crystal subermeged intself into the ground. </p>
+								<p>
+									I was responsible for scripting the Crystal Boss which was for the final level in the game. This included designing the core mechanic of charging the crystal, implementing progressive difficulty, and setting up item pickup spawners.
+								</p>
 
 								<details class="video-dropdown">
 									<summary>Show Video "Crystal Begin Charging" ▼</summary>
@@ -169,13 +194,19 @@
 
 								<details class="text-dropdown">
 									<summary>Show Extra Details ▼</summary>
-									<p> Extra details...</p>
+									<p>
+										The Crystal Boss served as the climactic challenge in the final stage of the game. Players were required to remain within a designated area to charge the crystal while fending off waves of enemies. Once fully charged, the crystal would submerge into the ground and a portal would rise in its place, allowing the player to leave the arena.
+									</p>
+									<p>
+										I also implemented a system that dynamically increased the difficulty as the charging progressed. This involved scaling enemy spawns, introducing tougher enemy types over time, and carefully adjusting pacing to maintain a steadily rising sense of tension.
+										Additionally, I created item pickup spawners around the arena to provide players with potions. These spawners were designed for reusability and were also implemented in the tutorial level.
+									</p>
 								</details>
 							</div>
 
 							<div class="mainInfo">
 								<h2>Tutorial Prompts</h2>
-								<p>I developed the tutorial prompt system and the videos for the tutorial level.</p>
+								<p>I developed the tutorial prompt system used in the game's tutorial level, allowing designers to easily create prompts with custom text and accompanying videos.</p>
 
 								<details class="video-dropdown">
 									<summary>Show Video "1st Tutorial Prompts" ▼</summary>
@@ -198,13 +229,21 @@
 
 								<details class="text-dropdown">
 									<summary>Show Extra Details ▼</summary>
-									<p> Extra details...</p>
+									<p>
+										The tutorial prompt system was designed to introduce new mechanics and guide players during the early stages of the game.
+										When players walked over a trigger zone, the prompt would fill the screen, displaying a video alongside explanatory text to clearly demonstrate the intended gameplay concept.
+									</p>
+									<p>
+										I built the system with designer accessibility in mind. Designers could easily assign which video to play and input custom text directly into each prompt without needing to modify any code.
+										To ensure players didn’t accidentally skip important information, I implemented a timing system that temporarily locked input, requiring a set duration to pass before the player could dismiss the prompt.
+										This helped maintain pacing and ensured key lessons were conveyed before the player moved on.
+									</p>
 								</details>
 							</div>
 
 							<div class="mainInfo">
 								<h2>Enemy AI</h2>
-								<p>I developed enemy AI using Unreal Engine’s Behaviour Tree system, gaining hands-on experience with it for the first time.</p>
+								<p>I developed the enemy AI for a variety of enemy types using Unreal Engine’s Behaviour Tree system. This was my first time working with the system, gaining valuable experience with the tool.</p>
 
 								<details class="video-dropdown">
 									<summary>Show Video "Thrall Navigation" ▼</summary>
@@ -239,13 +278,25 @@
 
 								<details class="text-dropdown">
 									<summary>Show Extra Details ▼</summary>
-									<p>I developed three distinct enemy behaviour types: close-range attackers (Thralls and Tanks), ranged evaders (Yeeters), and aggressive chargers/jumpers (Skullcrabs and Dogs).</p>
+									<p>
+										Using Unreal Engine's Behaviour Tree system, I implemented AI for several enemy types, each with unique behaviours to challenge players in different ways. This included the Thrall, Yeeter, Crab, Crab Boss, Dog, and Tank enemies.
+									</p>
+									<p>
+										The Thrall was a basic melee enemy that navigated directly to the player and attacked when in range.
+										The Yeeter introduced more complex behaviour which kept its distance from the player, it would throw a projectile orb and adjust its positioning based on the player's proximity.
+										The Crab shared similarities with the Thrall but featured a jump attack, launching itself at the player and dying upon impact.
+										The Dog built on this by adding a teleportation mechanic: it would charge at the player, then teleport back to its original position. It would only initiate a charge if the player was within range, otherwise it would pursue them normally.
+										The Tank followed the Thrall’s basic behaviour but added a spawn mechanic on death, releasing two smaller versions of itself to continue the fight.
+									</p>
+									<p>
+										Each behaviour was built using Unreal’s Behaviour Tree system, which I explored for the first time during this project. Through this, I gained a solid understanding of AI structure, blackboard-driven logic, and modular behaviour design.
+									</p>
 								</details>
 							</div>
 
 							<div class="mainInfo">
 								<h2>Enemy Dismemberment System</h2>
-								<p>I implemented a straightforward dismemberment system that assigned individual health values to each enemy limb. When an enemy was hit, damage was applied to a random limb, and if its health reached zero, the limb would be removed and replaced with a corresponding dismembered version at the same location.</p>
+								<p>I implemented a dynamic dismemberment system that assigned health values to individual limbs, allowing enemies to lose arms, legs, or their head based on where damage was applied. The system provided a visual payoff while maintaining gameplay balance.</p>
 
 								<details class="video-dropdown">
 									<summary>Show Video "Thrall Dismemberment" ▼</summary>
@@ -262,13 +313,22 @@
 
 								<details class="text-dropdown">
 									<summary>Show Extra Details ▼</summary>
-									<p> Further details... </p>
+									<p>
+										The dismemberment system was designed to add impact and feedback to combat, enhancing both visual and mechanical variety. Each limb such as arms, legs, and head was assigned its own health value. 
+										When an enemy was hit, the system would randomly select a limb to take the damage. If that limb’s health fell to zero, it would be removed by hiding the relevant bone in the skeleton, visually simulating dismemberment.
+										To sell the effect, a corresponding dismembered mesh was spawned at the exact location and allowed to fall naturally to the ground using physics. Blood effects were also triggered at the bone’s location to reinforce the visual feedback.
+									</p>
+									<p>
+										The system was implemented for Thralls and Yeeters, both of which could lose arms, legs, or their head. To maintain realism and avoid enemies running around headless or legless, the health of the legs and head was set to match the enemy’s total health.
+										This ensured those limbs could only be removed upon death, preserving immersion while still allowing for dramatic kills. However, during executions, all limb health was set to zero, causing enemies to appear as if they exploded.
+										While further improvements like a crawling behaviour after leg loss or more realistic reactions were considered, they were ultimately beyond the scope of this project.
+									</p>
 								</details>
 							</div>
 
 							<div class="mainInfo">
 								<h2>Level Transition</h2>
-								<p>Details about the system...</p>
+								<p>I developed the level transition system and scoring display, which presented players with their performance metrics after each level and tracked cumulative scores. This system also powered a leaderboard used during our expo to determine competition winners.</p>
 
 								<details class="video-dropdown">
 									<summary>Show Video "Scoreboard Transition"▼</summary>
@@ -279,17 +339,33 @@
 
 								<details class="text-dropdown">
 									<summary>Show Extra Details ▼</summary>
-									<p> Extra details...</p>
+									<p>
+										The level transition sequence served a dual purpose: providing a smooth fade between levels and presenting players with a detailed breakdown of their performance. 
+										After completing a level, players were shown a summary of their stats which included time taken, kills, executions, dismemberments, average sanity, and damage received. 
+										These values were then used to calculate a final level score using weighted constants assigned to each stat, ensuring a balanced and meaningful scoring system.
+									</p>
+									<p>
+										Before playing, users entered their name in the main menu, which was saved and later used to display scores on the leaderboard. Alongside the individual level stats, the game also tracked cumulative stats and scores across all levels, giving players an overall total score that built over time.
+										Following the personal performance summary, players were shown the top scores leaderboard. This featured the highest three scores for the current level and the top three cumulative scores across the game.
+									</p>
 								</details>
 							</div>
 
 							<div class="mainInfo">
 								<h2>Audio Scripting</h2>
-								<p>I developed the audio scripting using Unreal Engine’s audio systems, creating a dynamic system that seamlessly transitions between combat and ambient music based on gameplay context. Additionally, I implemented the trigger system for weapon voice lines to enhance immersion and player feedback.</p>
+								<p>I developed a dynamic audio system using Unreal Engine’s native tools, handling transitions between ambient and combat music, and scripting voice line triggers for weapons and environmental interactions to enhance immersion.</p>
 
 								<details class="text-dropdown">
 									<summary>Show Extra Details ▼</summary>
-									<p> Extra details...</p>
+									<p>
+										I was responsible for scripting the game's audio systems, ensuring music and voice lines reacted appropriately to gameplay events. 
+										A key feature was the seamless transition between ambient and action music, which was triggered based on combat state. 
+										I implemented logic to detect when the player entered or exited combat, allowing the music to adapt and support the game's pacing and tension.
+									</p>
+									<p>
+										In addition, I developed a trigger system for weapon voice lines (as the weapons were sentient). Each weapon like the sword, axe, and daggers featured unique audio cues that responded to specific events such as idling, executing enemies, scoring kills, using weapon abilities, picking up the weapon, or discovering keys. 
+										These voice lines required logical triggers to ensure they played only when appropriate, maintaining immersion as well as giving the weapons some personality.
+									</p>
 								</details>
 							</div>
 						</div>
