--- a/CupCatch.html
+++ b/CupCatch.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Bitter Extinction</title>
+		<title>Cup Catch</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -61,17 +61,17 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Bitter Extinction</h1>
+							<h1>Cup Catch</h1>
 							<div class="video-container">
 								<iframe width="1120" height="630"
-										src="https://www.youtube.com/embed/abIDLtW1kw4"
+										src="https://www.youtube.com/embed/XIMLoLxmTDw"
 										frameborder="0" allowfullscreen>
 								</iframe>
 							</div>
 							<div class="project-container">
 								<div class="left-container">
 									<h2>About</h2>
-									<p>Bitter Extinction began as a second-year university project and was submitted for the Games Academy Expo 2022. The project provided valuable experience in game design and teamwork, showcasing our ability to create a functional prototype within a limited timeframe. The game was well-received by attendees at the expo, who enjoyed its unique concept and gameplay. </p>
+									<p></p>
 								</div>
 								<div class="right-container">
 									<h2>Project Info</h2>
@@ -83,19 +83,19 @@
 										</div>
 										<div class="info-item">
 											<i class="fas fa-users"></i>
-											<span>Team Size: 8</span>
+											<span>Team Size: 1</span>
 										</div>
 										<div class="info-item">
 											<i class="fas fa-user"></i>
-											<span>Role: Gameplay Programmer</span>
+											<span>Role: Programmer</span>
 										</div>
 										<div class="info-item">
 											<i class="fas fa-clock"></i>
-											<span>Development Time: 7 Months</span>
+											<span>Development Time: 10 days</span>
 										</div>
 										<div class="info-item">
 											<i class="fas fa-project-diagram"></i>
-											<span>Project Type: Year 2 University</span>
+											<span>Project Type: Game Jam (GoedWare#12)</span>
 										</div>
 									</div>
 								</div>
