--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="ProgrammingProjects.html">Projects</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="AboutMe.html">About Me</a></li>
+							<li><a href="Education.html">Education</a></li>
+							<li><a href="Resumé.html">Resumé</a></li>
+							<li><a href="3DArt.html">3D Art</a></li>
+							<li><a href="GamesThatInspireMe.html">Games That Inspire Me</a></li>
 						</ul>
 					</nav>
 
