Added preview video to Bitter Extinction
Preview video added for bitter extinction button on programming projects page

--- a/ProgrammingProjects.html
+++ b/ProgrammingProjects.html
@@ -82,7 +82,10 @@
 								</article>
 								<article class="style1">
 									<span class="image">
-										<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+										<video autoplay loop muted playsinline>
+											<source src="videos/BitterExtinction/ProjectPagePreview.mp4" type="video/mp4">
+											Your browser does not support the video tag.
+										</video>
 									</span>
 									<a href="BitterExtinction.html">
 										<h2>Bitter Extinction</h2>
