Bitter Extinction Page Set up
The set up for the bitter extinction page is done. Ready for information.

--- a/BitterExtinction.html
+++ b/BitterExtinction.html
@@ -14,147 +14,221 @@
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
-			<div id="wrapper">
+		<div id="wrapper">
 
-				<!-- Header -->
-					<header id="header">
-						<div class="inner">
+			<!-- Header -->
+			<header id="header">
+				<div class="inner">
 
-							<!-- Logo -->
-							<a href="index.html" class="logo">
-								<span class="symbol"><img src="images/Portrait.png" alt="" /></span><span class="title">Lewis J Mitchell</span>
-							</a>
+					<!-- Logo -->
+					<a href="index.html" class="logo">
+						<span class="symbol"><img src="images/Portrait.png" alt="" /></span><span class="title">Lewis J Mitchell</span>
+					</a>
 
-							<!-- Nav -->
-								<nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav>
-
-						</div>
-					</header>
-
-				<!-- Menu -->
-					<nav id="menu">
-						<h2>Menu</h2>
+					<!-- Nav -->
+					<nav>
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="ProgrammingProjects.html">Projects</a></li>
-							<li><a href="AboutMe.html">About Me</a></li>
-							<li><a href="Education.html">Education</a></li>
-							<li><a href="Resumé.html">Resumé</a></li>
-							<li><a href="3DArt.html">3D Art</a></li>
-							<li><a href="GamesThatInspireMe.html">Games That Inspire Me</a></li>
-						</ul>
-						<h2>Projects</h2>
-						<ul>
-							<li><a href="AbyssalDread.html">Abyssal Dread</a></li>
-							<li><a href="BitterExtinction.html">Bitter Extinction</a></li>
-							<li><a href="Conjoined.html">Conjoined</a></li>
-							<li><a href="RippleDefence.html">Ripple Defence</a></li>
-							<li><a href="CupCatch.html">Cup Catch</a></li>
-							<li><a href="LootGenerationSystems.html">Loot Generation Systems</a></li>
+							<li><a href="#menu">Menu</a></li>
 						</ul>
 					</nav>
 
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-							<h1>Bitter Extinction</h1>
-							<div class="video-container">
-								<iframe width="1120" height="630"
-										src="https://www.youtube.com/embed/abIDLtW1kw4"
-										frameborder="0" allowfullscreen>
-								</iframe>
-							</div>
-							<div class="project-container">
-								<div class="left-container">
-									<h2>About</h2>
-									<p>Bitter Extinction began as a second-year university project and was submitted for the Games Academy Expo 2022. The project provided valuable experience in game design and teamwork, showcasing our ability to create a functional prototype within a limited timeframe. The game was well-received by attendees at the expo, who enjoyed its unique concept and gameplay. </p>
+				</div>
+			</header>
+
+			<!-- Menu -->
+			<nav id="menu">
+				<h2>Menu</h2>
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="ProgrammingProjects.html">Projects</a></li>
+					<li><a href="AboutMe.html">About Me</a></li>
+					<li><a href="Education.html">Education</a></li>
+					<li><a href="Resumé.html">Resumé</a></li>
+					<li><a href="3DArt.html">3D Art</a></li>
+					<li><a href="GamesThatInspireMe.html">Games That Inspire Me</a></li>
+				</ul>
+				<h2>Projects</h2>
+				<ul>
+					<li><a href="AbyssalDread.html">Abyssal Dread</a></li>
+					<li><a href="BitterExtinction.html">Bitter Extinction</a></li>
+					<li><a href="Conjoined.html">Conjoined</a></li>
+					<li><a href="RippleDefence.html">Ripple Defence</a></li>
+					<li><a href="CupCatch.html">Cup Catch</a></li>
+					<li><a href="LootGenerationSystems.html">Loot Generation Systems</a></li>
+				</ul>
+			</nav>
+
+			<!-- Main -->
+			<div id="main">
+				<div class="inner">
+					<h1>Bitter Extinction</h1>
+					<div class="video-container">
+						<iframe width="1120" height="630"
+								src="https://www.youtube.com/embed/abIDLtW1kw4"
+								frameborder="0" allowfullscreen>
+						</iframe>
+					</div>
+					<a href="https://shadylev.itch.io/bitter-extinction" class="download-box" target="_blank">
+						<i class="fas fa-cog"></i>
+						<span>Download: Itch.io</span>
+					</a>
+					<div class="project-container">
+						<div class="left-container">
+							<h2>About</h2>
+							<p>Bitter Extinction began as a second-year university project and was submitted for the Games Academy Expo 2022. The project provided valuable experience in game design and teamwork, showcasing our ability to create a functional prototype within a limited timeframe. The game was well-received by attendees at the expo, who enjoyed its unique concept and gameplay.</p>
+						</div>
+						<div class="right-container">
+							<h2>Project Info</h2>
+
+							<div class="project-info">
+								<div class="info-item">
+									<i class="fas fa-cogs"></i>
+									<span>Engine: Unity</span>
 								</div>
-								<div class="right-container">
-									<h2>Project Info</h2>
-
-									<div class="project-info">
-										<div class="info-item">
-											<i class="fas fa-cogs"></i>
-											<span>Engine: Unity</span>
-										</div>
-										<div class="info-item">
-											<i class="fas fa-users"></i>
-											<span>Team Size: 8</span>
-										</div>
-										<div class="info-item">
-											<i class="fas fa-user"></i>
-											<span>Role: Gameplay Programmer</span>
-										</div>
-										<div class="info-item">
-											<i class="fas fa-clock"></i>
-											<span>Development Time: 7 Months</span>
-										</div>
-										<div class="info-item">
-											<i class="fas fa-project-diagram"></i>
-											<span>Project Type: Year 2 University</span>
-										</div>
-									</div>
+								<div class="info-item">
+									<i class="fas fa-users"></i>
+									<span>Team Size: 8</span>
+								</div>
+								<div class="info-item">
+									<i class="fas fa-user"></i>
+									<span>Role: Gameplay Programmer</span>
+								</div>
+								<div class="info-item">
+									<i class="fas fa-clock"></i>
+									<span>Development Time: 7 Months</span>
+								</div>
+								<div class="info-item">
+									<i class="fas fa-project-diagram"></i>
+									<span>Project Type: Year 2 University</span>
 								</div>
 							</div>
-							<h2>System</h2>
-							<p>Info...</p>
-
-							<details class="video-dropdown">
-								<summary>Show Video ▼</summary>
-								<video autoplay loop muted playsinline>
-									<source src="videos/EmptyVideo.mp4" type="video/mp4">
-								</video>
-							</details>
-
-							<details class="text-dropdown">
-								<summary>Show Extra Details ▼</summary>
-								<p>Further Info...</p>
-							</details>
 						</div>
 					</div>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<section>
-								<h2>Get in touch</h2>
-								<form method="post" action="https://formspree.io/f/mnnpbyzd">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section>
-							<section>
-								<h2>Follow</h2>
-								<ul class="icons">
-									<li><a href="https://github.com/Lewapp" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="https://lewapp.itch.io/" class="icon brands style2 fa-itch-io"><span class="label">Itch.io</span></a></li>
-									<li><a href="https://www.linkedin.com/in/lewis-mitchell-9a0a401bb/" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="mailto:JMitchellLewis@outlook.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
-								</ul>
-							</section>
-							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</footer>
+					<div class="mainInfo">
+						<h2>Shop System</h2>
+						<p>
+							About System...
+						</p>
 
+						<details class="video-dropdown">
+							<summary>Show Video "Name" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/EmptyVideo.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="text-dropdown">
+							<summary>Show Extra Details ▼</summary>
+							<p>
+								Extra Details...
+							</p>
+						</details>
+					</div>
+
+					<div class="mainInfo">
+						<h2>Turrets & Traps</h2>
+						<p>
+							About System...
+						</p>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Name" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/EmptyVideo.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="text-dropdown">
+							<summary>Show Extra Details ▼</summary>
+							<p>
+								Extra Details...
+							</p>
+						</details>
+					</div>
+
+					<div class="mainInfo">
+						<h2>Weapons</h2>
+						<p>
+							About System...
+						</p>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Name" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/EmptyVideo.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="text-dropdown">
+							<summary>Show Extra Details ▼</summary>
+							<p>
+								Extra Details...
+							</p>
+						</details>
+					</div>
+
+					<div class="mainInfo">
+						<h2>Grid Improvements</h2>
+						<p>
+							About System...
+						</p>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Name" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/EmptyVideo.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="text-dropdown">
+							<summary>Show Extra Details ▼</summary>
+							<p>
+								Extra Details...
+							</p>
+						</details>
+					</div>
+				</div>
 			</div>
+			<!-- Footer -->
+			<footer id="footer">
+				<div class="inner">
+					<section>
+						<h2>Get in touch</h2>
+						<form method="post" action="https://formspree.io/f/mnnpbyzd">
+							<div class="fields">
+								<div class="field half">
+									<input type="text" name="name" id="name" placeholder="Name" />
+								</div>
+								<div class="field half">
+									<input type="email" name="email" id="email" placeholder="Email" />
+								</div>
+								<div class="field">
+									<textarea name="message" id="message" placeholder="Message"></textarea>
+								</div>
+							</div>
+							<ul class="actions">
+								<li><input type="submit" value="Send" class="primary" /></li>
+							</ul>
+						</form>
+					</section>
+					<section>
+						<h2>Follow</h2>
+						<ul class="icons">
+							<li><a href="https://github.com/Lewapp" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://lewapp.itch.io/" class="icon brands style2 fa-itch-io"><span class="label">Itch.io</span></a></li>
+							<li><a href="https://www.linkedin.com/in/lewis-mitchell-9a0a401bb/" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="mailto:JMitchellLewis@outlook.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+						</ul>
+					</section>
+					<ul class="copyright">
+						<li>&copy; Untitled. All rights reserved</li>
+						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</div>
+			</footer>
+
+		</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
