Added some videos to Bitter Extinction Page
Bitter Extinction Page now has a bunch of videos showing the prototype phase for the different systems and mechanics I had worked on.

--- a/BitterExtinction.html
+++ b/BitterExtinction.html
@@ -112,9 +112,23 @@
 						</p>
 
 						<details class="video-dropdown">
-							<summary>Show Video "Name" ▼</summary>
+							<summary>Show Video "Shop Final Iteration" ▼</summary>
 							<video autoplay loop muted playsinline>
-								<source src="videos/EmptyVideo.mp4" type="video/mp4">
+								<source src="videos/BitterExtinction/ShopUI1080.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Shop 2nd Iteration" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/ShopIterationTwo1080.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Shop 1st Iteration" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/ShopIterationOne1080.mp4" type="video/mp4">
 							</video>
 						</details>
 
@@ -127,17 +141,61 @@
 					</div>
 
 					<div class="mainInfo">
-						<h2>Turrets & Traps</h2>
+						<h2>Turrets</h2>
+						<p>
+							About System...
+						</p>
+
+
+						<details class="video-dropdown">
+							<summary>Show Video "Prototype Telsa Tower" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/TeslaPrototype1080.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="text-dropdown">
+							<summary>Show Extra Details ▼</summary>
+							<p>
+								Extra Details...
+							</p>
+						</details>
+					</div>
+
+					<div class="mainInfo">
+						<h2>Traps</h2>
 						<p>
 							About System...
 						</p>
 
 						<details class="video-dropdown">
-							<summary>Show Video "Name" ▼</summary>
+							<summary>Show Video "EMP Mine Prototyping" ▼</summary>
 							<video autoplay loop muted playsinline>
-								<source src="videos/EmptyVideo.mp4" type="video/mp4">
+								<source src="videos/BitterExtinction/EMPMine1080.mp4" type="video/mp4">
 							</video>
 						</details>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Tar Trap Prototyping" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/TarTrapPrototype1080.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Spike Trap V1 Prototyping" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/SpikeTrapV11080.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Spike Trap V2 Prototyping" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/SpikeTrapV21080.mp4" type="video/mp4">
+							</video>
+						</details>
+
 
 						<details class="text-dropdown">
 							<summary>Show Extra Details ▼</summary>
@@ -149,6 +207,34 @@
 
 					<div class="mainInfo">
 						<h2>Weapons</h2>
+						<p>
+							About System...
+						</p>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Tar Gun Prototype" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/TarGunPrototype1080.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Sniper Prototype" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/SniperPrototype1080.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="text-dropdown">
+							<summary>Show Extra Details ▼</summary>
+							<p>
+								Extra Details...
+							</p>
+						</details>
+					</div>
+
+					<div class="mainInfo">
+						<h2>Upgrade System</h2>
 						<p>
 							About System...
 						</p>
@@ -178,6 +264,28 @@
 							<summary>Show Video "Name" ▼</summary>
 							<video autoplay loop muted playsinline>
 								<source src="videos/EmptyVideo.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="text-dropdown">
+							<summary>Show Extra Details ▼</summary>
+							<p>
+								Extra Details...
+							</p>
+						</details>
+					</div>
+
+
+					<div class="mainInfo">
+						<h2>Scrapped Radar Idea</h2>
+						<p>
+							About System...
+						</p>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Testing Radar" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/RadarSystemTest1080.mp4" type="video/mp4">
 							</video>
 						</details>
 
