Towers and Upgrade System videos added
Videos for towers and the upgrade system have been added. Also added a temporary CV pdf for the resumé section

--- a/AbyssalDread.html
+++ b/AbyssalDread.html
@@ -68,7 +68,7 @@
 									frameborder="0" allowfullscreen>
 							</iframe>
 						</div>
-						<a href="https://mrsaucyvibes.itch.io/abyssal-dread" class="download-box" target="_blank">
+						<a href="https://mrsaucyvibes.itch.io/abyssal-dread" class="download-box" target="_blank" rel="noopener noreferrer">
 							<i class="fas fa-cog"></i>
 							<span>Download: Itch.io</span>
 						</a>
