--- a/BitterExtinction.html
+++ b/BitterExtinction.html
@@ -68,7 +68,7 @@
 								frameborder="0" allowfullscreen>
 						</iframe>
 					</div>
-					<a href="https://shadylev.itch.io/bitter-extinction" class="download-box" target="_blank">
+					<a href="https://shadylev.itch.io/bitter-extinction" class="download-box" target="_blank" rel="noopener noreferrer">
 						<i class="fas fa-cog"></i>
 						<span>Download: Itch.io</span>
 					</a>
@@ -141,16 +141,49 @@
 					</div>
 
 					<div class="mainInfo">
-						<h2>Turrets</h2>
+						<h2>Towers</h2>
 						<p>
 							About System...
 						</p>
 
+						<details class="video-dropdown">
+							<summary>Show Video "Heater Tower Demonstration ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/HeatSystem1080.mp4" type="video/mp4">
+							</video>
+						</details>
 
 						<details class="video-dropdown">
-							<summary>Show Video "Prototype Telsa Tower" ▼</summary>
+							<summary>Show Video "Prototype Tesla Tower" ▼</summary>
 							<video autoplay loop muted playsinline>
 								<source src="videos/BitterExtinction/TeslaPrototype1080.mp4" type="video/mp4">
+							</video>
+						</details>
+						<details class="video-dropdown">
+							<summary>Show Video "Tesla Tower Gameplay" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/TeslaTowerFinal1080.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Prototype Flame Tower" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/FlamerPrototype1080.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Prototype Artillery Tower" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/Artillery.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Piston Tower Testing" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/PistonTower.mp4" type="video/mp4">
 							</video>
 						</details>
 
@@ -240,9 +273,9 @@
 						</p>
 
 						<details class="video-dropdown">
-							<summary>Show Video "Name" ▼</summary>
+							<summary>Show Video "Upgrading Gatling Towers" ▼</summary>
 							<video autoplay loop muted playsinline>
-								<source src="videos/EmptyVideo.mp4" type="video/mp4">
+								<source src="videos/BitterExtinction/UpgradeSystem1080.mp4" type="video/mp4">
 							</video>
 						</details>
 
