--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style1">
+<!--								<article class="style1">
 									<span class="image">
 										<video autoplay loop muted playsinline>
 											<source src="videos/Education.mp4" type="video/mp4">
@@ -98,7 +98,7 @@
 											<p>My academic background, courses, and certifications related to programming & game development</p>
 										</div>
 									</a>
-								</article>
+								</article>-->
 								<article class="style1">
 									<span class="image">
 										<video autoplay loop muted playsinline>
@@ -106,14 +106,14 @@
 											Your browser does not support the video tag.
 										</video>
 									</span>
-									<a href="Resumé.html">
+									<a href="Lewis Mitchell CV.pdf" target="_blank" rel="noopener noreferrer">
 										<h2>Resumé</h2>
 										<div class="content">
 											<p>View my skills and qualifications in one place</p>
 										</div>
 									</a>
 								</article>
-								<article class="style1">
+<!--								<article class="style1">
 									<span class="image">
 										<video autoplay loop muted playsinline>
 											<source src="videos/3DArt.mp4" type="video/mp4">
@@ -141,7 +141,7 @@
 										</div>
 									</a>
 								</article>
-							</section>
+-->							</section>
 						</div>
 					</div>
 
