Preview added for Conjoined Project
Preview added for conjoined project. Also have hidden unfinished pages from access. They will be re-accessible once finished. Resumé in side bar now takes you to the CV pdf

--- a/index.html
+++ b/index.html
@@ -14,175 +14,179 @@
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
-			<div id="wrapper">
+		<div id="wrapper">
 
-				<!-- Header -->
-					<header id="header">
-						<div class="inner">
+			<!-- Header -->
+			<header id="header">
+				<div class="inner">
 
-							<!-- Logo -->
-								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/Portrait.png" alt="" /></span><span class="title">Lewis J Mitchell</span>
-								</a>
+					<!-- Logo -->
+					<a href="index.html" class="logo">
+						<span class="symbol"><img src="images/Portrait.png" alt="" /></span><span class="title">Lewis J Mitchell</span>
+					</a>
 
-							<!-- Nav -->
-								<nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav>
-
-						</div>
-					</header>
-
-				<!-- Menu -->
-					<nav id="menu">
-						<h2>Menu</h2>
+					<!-- Nav -->
+					<nav>
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="ProgrammingProjects.html">Projects</a></li>
-							<li><a href="AboutMe.html">About Me</a></li>
-							<li><a href="Education.html">Education</a></li>
-							<li><a href="Resumé.html">Resumé</a></li>
-							<li><a href="3DArt.html">3D Art</a></li>
-							<li><a href="GamesThatInspireMe.html">Games That Inspire Me</a></li>
+							<li><a href="#menu">Menu</a></li>
 						</ul>
 					</nav>
 
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-							<header>
-								<h1>Game Programmer with a Passion for Innovative Gameplay.</h1>
-								<p>Focused on crafting efficient, clean code and solving complex challenges to bring immersive gameplay experiences to life</p>
-							</header>
-							<section class="tiles">
-								<article class="style1">
-									<span class="image">
-										<video autoplay loop muted playsinline>
-											<source src="videos/ProgramTrailerr.mp4" type="video/mp4">
-											Your browser does not support the video tag.
-										</video>
-									</span>
-									<a href="ProgrammingProjects.html">
-										<h2>Programming Projects</h2>
-										<div class="content">
-											<p>Explore my coding portfolio, featuring games, applications, and technical experiments</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<video autoplay loop muted playsinline>
-											<source src="videos/Neuron.mp4" type="video/mp4">
-											Your browser does not support the video tag.
-										</video>
-									</span>
-									<a href="AboutMe.html">
-										<h2>About Me</h2>
-										<div class="content">
-											<p>A little about who I am, my interests, and my journey in programming and game development</p>
-										</div>
-									</a>
-								</article>
-<!--								<article class="style1">
-									<span class="image">
-										<video autoplay loop muted playsinline>
-											<source src="videos/Education.mp4" type="video/mp4">
-											Your browser does not support the video tag.
-										</video>
-									</span>
-									<a href="Education.html">
-										<h2>Education</h2>
-										<div class="content">
-											<p>My academic background, courses, and certifications related to programming & game development</p>
-										</div>
-									</a>
-								</article>-->
-								<article class="style1">
-									<span class="image">
-										<video autoplay loop muted playsinline>
-											<source src="videos/ResuméOption2.mp4" type="video/mp4">
-											Your browser does not support the video tag.
-										</video>
-									</span>
-									<a href="Lewis Mitchell CV.pdf" target="_blank" rel="noopener noreferrer">
-										<h2>Resumé</h2>
-										<div class="content">
-											<p>View my skills and qualifications in one place</p>
-										</div>
-									</a>
-								</article>
-<!--								<article class="style1">
-									<span class="image">
-										<video autoplay loop muted playsinline>
-											<source src="videos/3DArt.mp4" type="video/mp4">
-											Your browser does not support the video tag.
-										</video>
-									</span>
-									<a href="3DArt.html">
-										<h2>3D Art</h2>
-										<div class="content">
-											<p>A collection of 3D work that I've done for fun as a way to learn about 3D art</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<video autoplay loop muted playsinline>
-											<source src="videos/Inspire.mp4" type="video/mp4">
-											Your browser does not support the video tag.
-										</video>
-									</span>
-									<a href="GamesThatInspireMe.html">
-										<h2>Games that Inpsire Me</h2>
-										<div class="content">
-											<p>Games that inspire me, my experiences, and how they influence my development approach</p>
-										</div>
-									</a>
-								</article>
--->							</section>
-						</div>
-					</div>
+				</div>
+			</header>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<section>
-								<h2>Get in touch</h2>
-								<form method="post" action="https://formspree.io/f/mnnpbyzd">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section>
-							<section>
-								<h2>Follow</h2>
-								<ul class="icons">
-									<li><a href="https://github.com/Lewapp" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="https://lewapp.itch.io/" class="icon brands style2 fa-itch-io"><span class="label">Itch.io</span></a></li>
-									<li><a href="https://www.linkedin.com/in/lewis-mitchell-9a0a401bb/" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="mailto:JMitchellLewis@outlook.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
-								</ul>
-							</section>
-							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</footer>
+			<!-- Menu -->
+			<nav id="menu">
+				<h2>Menu</h2>
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="ProgrammingProjects.html">Projects</a></li>
+					<li><a href="AboutMe.html">About Me</a></li>
+					<li><a href="Lewis Mitchell CV.pdf" target="_blank" rel="noopener noreferrer">Resumé</a></li>
+				</ul>
+				<h2>Projects</h2>
+				<ul>
+					<li><a href="AbyssalDread.html">Abyssal Dread</a></li>
+					<li><a href="BitterExtinction.html">Bitter Extinction</a></li>
+					<li><a href="Conjoined.html">Conjoined</a></li>
+				</ul>
+			</nav>
 
+			<!-- Main -->
+			<div id="main">
+				<div class="inner">
+					<header>
+						<h1>Game Programmer with a Passion for Innovative Gameplay.</h1>
+						<p>Focused on crafting efficient, clean code and solving complex challenges to bring immersive gameplay experiences to life</p>
+					</header>
+					<section class="tiles">
+						<article class="style1">
+							<span class="image">
+								<video autoplay loop muted playsinline>
+									<source src="videos/ProgramTrailerr.mp4" type="video/mp4">
+									Your browser does not support the video tag.
+								</video>
+							</span>
+							<a href="ProgrammingProjects.html">
+								<h2>Programming Projects</h2>
+								<div class="content">
+									<p>Explore my coding portfolio, featuring games, applications, and technical experiments</p>
+								</div>
+							</a>
+						</article>
+						<article class="style1">
+							<span class="image">
+								<video autoplay loop muted playsinline>
+									<source src="videos/Neuron.mp4" type="video/mp4">
+									Your browser does not support the video tag.
+								</video>
+							</span>
+							<a href="AboutMe.html">
+								<h2>About Me</h2>
+								<div class="content">
+									<p>A little about who I am, my interests, and my journey in programming and game development</p>
+								</div>
+							</a>
+						</article>
+<!--					<article class="style1">
+							<span class="image">
+								<video autoplay loop muted playsinline>
+									<source src="videos/Education.mp4" type="video/mp4">
+									Your browser does not support the video tag.
+								</video>
+							</span>
+							<a href="Education.html">
+								<h2>Education</h2>
+								<div class="content">
+									<p>My academic background, courses, and certifications related to programming & game development</p>
+								</div>
+							</a>
+						</article>-->
+						<article class="style1">
+							<span class="image">
+								<video autoplay loop muted playsinline>
+									<source src="videos/ResuméOption2.mp4" type="video/mp4">
+									Your browser does not support the video tag.
+								</video>
+							</span>
+							<a href="Lewis Mitchell CV.pdf" target="_blank" rel="noopener noreferrer">
+								<h2>Resumé</h2>
+								<div class="content">
+									<p>View my skills and qualifications in one place</p>
+								</div>
+							</a>
+						</article>
+<!--					<article class="style1">
+							<span class="image">
+								<video autoplay loop muted playsinline>
+									<source src="videos/3DArt.mp4" type="video/mp4">
+									Your browser does not support the video tag.
+								</video>
+							</span>
+							<a href="3DArt.html">
+								<h2>3D Art</h2>
+								<div class="content">
+									<p>A collection of 3D work that I've done for fun as a way to learn about 3D art</p>
+								</div>
+							</a>
+						</article>
+						<article class="style1">
+							<span class="image">
+								<video autoplay loop muted playsinline>
+									<source src="videos/Inspire.mp4" type="video/mp4">
+									Your browser does not support the video tag.
+								</video>
+							</span>
+							<a href="GamesThatInspireMe.html">
+								<h2>Games that Inpsire Me</h2>
+								<div class="content">
+									<p>Games that inspire me, my experiences, and how they influence my development approach</p>
+								</div>
+							</a>
+						</article>
+-->					</section>
+				</div>
 			</div>
+
+			<!-- Footer -->
+			<footer id="footer">
+				<div class="inner">
+					<section>
+						<h2>Get in touch</h2>
+						<form method="post" action="https://formspree.io/f/mnnpbyzd">
+							<div class="fields">
+								<div class="field half">
+									<input type="text" name="name" id="name" placeholder="Name" />
+								</div>
+								<div class="field half">
+									<input type="email" name="email" id="email" placeholder="Email" />
+								</div>
+								<div class="field">
+									<textarea name="message" id="message" placeholder="Message"></textarea>
+								</div>
+							</div>
+							<ul class="actions">
+								<li><input type="submit" value="Send" class="primary" /></li>
+							</ul>
+						</form>
+					</section>
+					<section>
+						<h2>Follow</h2>
+						<ul class="icons">
+							<li><a href="https://github.com/Lewapp" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://lewapp.itch.io/" class="icon brands style2 fa-itch-io"><span class="label">Itch.io</span></a></li>
+							<li><a href="https://www.linkedin.com/in/lewis-mitchell-9a0a401bb/" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="mailto:JMitchellLewis@outlook.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+						</ul>
+					</section>
+					<ul class="copyright">
+						<li>&copy; Untitled. All rights reserved</li>
+						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</div>
+			</footer>
+
+		</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
