--- a/ProgrammingProjects.html
+++ b/ProgrammingProjects.html
@@ -14,172 +14,170 @@
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
-			<div id="wrapper">
+		<div id="wrapper">
 
-				<!-- Header -->
-					<header id="header">
-						<div class="inner">
+			<!-- Header -->
+			<header id="header">
+				<div class="inner">
 
-							<!-- Logo -->
-							<a href="index.html" class="logo">
-								<span class="symbol"><img src="images/Portrait.png" alt="" /></span><span class="title">Lewis J Mitchell</span>
-							</a>
+					<!-- Logo -->
+					<a href="index.html" class="logo">
+						<span class="symbol"><img src="images/Portrait.png" alt="" /></span><span class="title">Lewis J Mitchell</span>
+					</a>
 
-							<!-- Nav -->
-							<nav>
-								<ul>
-									<li><a href="#menu">Menu</a></li>
-								</ul>
-							</nav>
-
-						</div>
-					</header>
-
-				<!-- Menu -->
-					<nav id="menu">
-						<h2>Menu</h2>
+					<!-- Nav -->
+					<nav>
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="ProgrammingProjects.html">Projects</a></li>
-							<li><a href="AboutMe.html">About Me</a></li>
-							<li><a href="Education.html">Education</a></li>
-							<li><a href="Resumé.html">Resumé</a></li>
-							<li><a href="3DArt.html">3D Art</a></li>
-							<li><a href="GamesThatInspireMe.html">Games That Inspire Me</a></li>
-						</ul>
-						<h2>Projects</h2>
-						<ul>
-							<li><a href="AbyssalDread.html">Abyssal Dread</a></li>
-							<li><a href="BitterExtinction.html">Bitter Extinction</a></li>
-							<li><a href="Conjoined.html">Conjoined</a></li>
-							<li><a href="RippleDefence.html">Ripple Defence</a></li>
-							<li><a href="CupCatch.html">Cup Catch</a></li>
-							<li><a href="LootGenerationSystems.html">Loot Generation Systems</a></li>
+							<li><a href="#menu">Menu</a></li>
 						</ul>
 					</nav>
 
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-							<header>
-								<h1>Projects</h1>
-								<p>Projects that I've worked on</p>
-							</header>
-							<section class="tiles">
-								<article class="style1">
-									<span class="image">
-										<video autoplay loop muted playsinline>
-											<source src="videos/AbyssalDread/ProjectPagePreview.mp4" type="video/mp4">
-											Your browser does not support the video tag.
-										</video>
-									</span>
-									<a href="AbyssalDread.html">
-										<h2>Abyssal Dread</h2>
-										<div class="content">
-											<p>Escape the nightmare you woke up to using the ancient weaponry of another world and hack and slash your way through the gritty, dark, dungeons of a prison, filled with otherworldly enemies</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<video autoplay loop muted playsinline>
-											<source src="videos/BitterExtinction/ProjectPagePreview.mp4" type="video/mp4">
-											Your browser does not support the video tag.
-										</video>
-									</span>
-									<a href="BitterExtinction.html">
-										<h2>Bitter Extinction</h2>
-										<div class="content">
-											<p>A tower defence shooter, with a dieselpunk aesthetic. You are commissioned with fortifying an abandoned mining colony. The catch is this glacial planet is home to metal devouring creatures, evolving as they feast on your defences. Extinction is the only way</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-									</span>
-									<a href="Conjoined.html">
-										<h2>Conjoined</h2>
-										<div class="content">
-											<p>A combat adventure game filled with challenging puzzles. You must gather a key from a gigantic killer robot called a hattertron; programmed by Odious Keith. Destroying it will drop a key allowing you to enter Odious Keith's castle</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-									</span>
-									<a href="RippleDefence.html">
-										<h2>Ripple Defence</h2>
-										<div class="content">
-											<p>A calm game where the objective is to defend your Lilypad from incoming rocks/debris. There are too many rocks to defend from but thankfully the pond seems to generate strange power-ups which can aid you in your survival</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-									</span>
-									<a href="generic.html">
-										<h2>Cup Catch</h2>
-										<div class="content">
-											<p>Spin the cup to catch incoming coloured balls to earn points. Get as many points as you can get before losing all your health</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-									</span>
-									<a href="generic.html">
-										<h2>Loot Generation Systems</h2>
-										<div class="content">
-											<p>Some loot generation systems that I have worked on in my freetime</p>
-										</div>
-									</a>
-								</article>
-							</section>
-						</div>
-					</div>
+				</div>
+			</header>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<section>
-								<h2>Get in touch</h2>
-								<form method="post" action="https://formspree.io/f/mnnpbyzd">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section>
-							<section>
-								<h2>Follow</h2>
-								<ul class="icons">
-									<li><a href="https://github.com/Lewapp" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="https://lewapp.itch.io/" class="icon brands style2 fa-itch-io"><span class="label">Itch.io</span></a></li>
-									<li><a href="https://www.linkedin.com/in/lewis-mitchell-9a0a401bb/" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="mailto:JMitchellLewis@outlook.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
-								</ul>
-							</section>
-							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</footer>
+			<!-- Menu -->
+			<nav id="menu">
+				<h2>Menu</h2>
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="ProgrammingProjects.html">Projects</a></li>
+					<li><a href="AboutMe.html">About Me</a></li>
+					<li><a href="Lewis Mitchell CV.pdf" target="_blank" rel="noopener noreferrer">Resumé</a></li>
+				</ul>
+				<h2>Projects</h2>
+				<ul>
+					<li><a href="AbyssalDread.html">Abyssal Dread</a></li>
+					<li><a href="BitterExtinction.html">Bitter Extinction</a></li>
+					<li><a href="Conjoined.html">Conjoined</a></li>
+				</ul>
+			</nav>
 
+			<!-- Main -->
+			<div id="main">
+				<div class="inner">
+					<header>
+						<h1>Projects</h1>
+						<p>Projects that I've worked on</p>
+					</header>
+					<section class="tiles">
+						<article class="style1">
+							<span class="image">
+								<video autoplay loop muted playsinline>
+									<source src="videos/AbyssalDread/ProjectPagePreview.mp4" type="video/mp4">
+									Your browser does not support the video tag.
+								</video>
+							</span>
+							<a href="AbyssalDread.html">
+								<h2>Abyssal Dread</h2>
+								<div class="content">
+									<p>Escape the nightmare you woke up to using the ancient weaponry of another world and hack and slash your way through the gritty, dark, dungeons of a prison, filled with otherworldly enemies</p>
+								</div>
+							</a>
+						</article>
+						<article class="style1">
+							<span class="image">
+								<video autoplay loop muted playsinline>
+									<source src="videos/BitterExtinction/ProjectPagePreview.mp4" type="video/mp4">
+									Your browser does not support the video tag.
+								</video>
+							</span>
+							<a href="BitterExtinction.html">
+								<h2>Bitter Extinction</h2>
+								<div class="content">
+									<p>A tower defence shooter, with a dieselpunk aesthetic. You are commissioned with fortifying an abandoned mining colony. The catch is this glacial planet is home to metal devouring creatures, evolving as they feast on your defences. Extinction is the only way</p>
+								</div>
+							</a>
+						</article>
+						<article class="style1">
+							<span class="image">
+								<video autoplay loop muted playsinline>
+									<source src="videos/Conjoined/ProjectPagePreview.mp4" type="video/mp4">
+									Your browser does not support the video tag.
+								</video>
+							</span>
+							<a href="Conjoined.html">
+								<h2>Conjoined</h2>
+								<div class="content">
+									<p>A combat adventure game filled with challenging puzzles. You must gather a key from a gigantic killer robot called a hattertron; programmed by Odious Keith. Destroying it will drop a key allowing you to enter Odious Keith's castle</p>
+								</div>
+							</a>
+						</article>
+						<!--<article class="style1">
+					<span class="image">
+						<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+					</span>
+					<a href="RippleDefence.html">
+						<h2>Ripple Defence</h2>
+						<div class="content">
+							<p>A calm game where the objective is to defend your Lilypad from incoming rocks/debris. There are too many rocks to defend from but thankfully the pond seems to generate strange power-ups which can aid you in your survival</p>
+						</div>
+					</a>
+				</article>
+				<article class="style1">
+					<span class="image">
+						<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+					</span>
+					<a href="generic.html">
+						<h2>Cup Catch</h2>
+						<div class="content">
+							<p>Spin the cup to catch incoming coloured balls to earn points. Get as many points as you can get before losing all your health</p>
+						</div>
+					</a>
+				</article>
+				<article class="style1">
+					<span class="image">
+						<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+					</span>
+					<a href="generic.html">
+						<h2>Loot Generation Systems</h2>
+						<div class="content">
+							<p>Some loot generation systems that I have worked on in my freetime</p>
+						</div>
+					</a>
+				</article>-->
+					</section>
+				</div>
 			</div>
+
+			<!-- Footer -->
+			<footer id="footer">
+				<div class="inner">
+					<section>
+						<h2>Get in touch</h2>
+						<form method="post" action="https://formspree.io/f/mnnpbyzd">
+							<div class="fields">
+								<div class="field half">
+									<input type="text" name="name" id="name" placeholder="Name" />
+								</div>
+								<div class="field half">
+									<input type="email" name="email" id="email" placeholder="Email" />
+								</div>
+								<div class="field">
+									<textarea name="message" id="message" placeholder="Message"></textarea>
+								</div>
+							</div>
+							<ul class="actions">
+								<li><input type="submit" value="Send" class="primary" /></li>
+							</ul>
+						</form>
+					</section>
+					<section>
+						<h2>Follow</h2>
+						<ul class="icons">
+							<li><a href="https://github.com/Lewapp" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://lewapp.itch.io/" class="icon brands style2 fa-itch-io"><span class="label">Itch.io</span></a></li>
+							<li><a href="https://www.linkedin.com/in/lewis-mitchell-9a0a401bb/" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="mailto:JMitchellLewis@outlook.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+						</ul>
+					</section>
+					<ul class="copyright">
+						<li>&copy; Untitled. All rights reserved</li>
+						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</div>
+			</footer>
+
+		</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
